--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "ms": "^2.1.3",
     "@types/ms": "^0.7.31",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "ms": "^2.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
